<resources>
    <string name="app_name">ContactsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Contacts</string>
    <string name="you_have_no_contacts_yet">You have no contacts yet</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="enter_phonenumber">Enter PhoneNumber</string>
</resources>